@@ -1,11 +1,19 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '2.3.0'
     id 'org.jetbrains.kotlin.plugin.serialization' version '2.3.0'
+    id 'application'
+    id 'com.gradleup.shadow' version '9.2.2'
 }
 
 group = 'timonff.com'
 version = '1.0-SNAPSHOT'
 
+application {
+    mainClass = 'timonff.com.MainKt'
+    applicationDefaultJvmArgs = [
+            "--enable-native-access=ALL-UNNAMED"
+    ]
+}
 repositories {
     mavenCentral()
 }
